Add delete buttons to each URL object

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,7 +31,12 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id] %>
+                <td>
+              <form method="POST" action="/urls/9sm5xK/delete">
+              <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+            </td>
             </tr>
           <% } %>
         </tbody>
