--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -33,6 +35,9 @@
               <td><%= id %></td>
               <td><%= urls[id] %>
                 <td>
+                  <form method="POST" action="/urls/<%= id %>/update">
+                    <button type="submit" class="btn btn-danger">Edit</button></td>
+                    <td>
               <form method="POST" action="/urls/9sm5xK/delete">
               <button type="submit" class="btn btn-danger">Delete</button>
             </form>
