--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,6 +20,9 @@
         <p class="card-text">
           Short URL ID: <a href="/urls/<%= id %>"><%= id %></a>
         </p>
+        <form method="POST" action="/urls/<%= id %>/update">
+          <button type="submit" class="btn btn-danger">Edit</button>
+        </form>
       </div>
       <div class="card-footer text-muted"></div>
       <a href="#new">Create New URL</a>
