--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,5 +19,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form method="POST" action="/login" class="form-inline">
+      <input type="text" name="username" placeholder="Username">
+      <button type="submit" class="nav-item nav-link">Login</button>
+    </form>
   </nav>
 </header>
