--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -35,10 +35,11 @@
               <td><%= id %></td>
               <td><%= urls[id] %>
                 <td>
-                  <form method="POST" action="/urls/<%= id %>/update">
-                    <button type="submit" class="btn btn-danger">Edit</button></td>
+                   
+                    <a href="/urls/<%= id %>" class="btn btn-secondary">Edit</a></td>
+                  
                     <td>
-              <form method="POST" action="/urls/9sm5xK/delete">
+              <form method="POST" action="/urls/<%= id %>/delete">
               <button type="submit" class="btn btn-danger">Delete</button>
             </form>
             </td>
