--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,9 +19,11 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if (!username) { %>
     <form method="POST" action="/login" class="form-inline">
       <input type="text" name="username" placeholder="Username">
       <button type="submit" class="nav-item nav-link">Login</button>
-    </form>
+    </form> <% } else { %> 
+      <span> Logged in as:<%= username %></span><% } %> 
   </nav>
 </header>
