--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/register">Register</a>
       </div>
     </div>
     <% if (!username) { %>
@@ -30,5 +31,6 @@
         <button type="submit" class="nav-item nav-link">Log Out</button>
       </form>
       <% } %> 
+    </div>
   </nav>
 </header>
