Create a users Object

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <form method="POST" action="/register">
   <label for="email">Email:</label>
-  <input type="text" id="email" name="email" required>
+  <input type="email" id="email" name="email" required>
 </br>
   <label for="password">Password:</label>
   <input type="text" id="password" name="password" required>
