--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,20 +16,18 @@
       crossorigin="anonymous"
     />
 
-    <title>Register</title>
+    <title>Login</title>
   </head>
 
-  <form method="POST" action="/register">
+  <form method="POST" action="/login">
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email">
+    <input type="email" id="email" name="email" required>
   </br>
     <label for="password">Password:</label>
-    <input type="text" id="password" name="password">
+    <input type="text" id="password" name="password" required>
   </br>
-    <button type="submit" class="btn btn-secondary">Register</button>
+    <button type="submit" class="btn btn-secondary">Login</button>
   </form>
-  
-  
 
   <body>
   
