More persmission features

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,7 +22,7 @@
         </p>
         <form method="POST" action="/urls/<%= id %>/edit">
           <label for="EditURL">New URL:</label>
-          <input type="text" name="EditURL" value=<%= longURL %>>
+          <input type="text" name="EditURL" value="<%= longURL %>">
           <button type="submit" class="btn btn-secondary">Edit</button>
         </form>
       </div>
