--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,7 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %>
+              <td><%= urls[id].longURL %>
                 <td>
                    
                     <a href="/urls/<%= id %>" class="btn btn-secondary">Edit</a></td>
