--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,17 +19,21 @@
     <title>Login</title>
   </head>
 
+  <body>
+    <%- include('partials/_header') %>
+
   <form method="POST" action="/login">
+  </br>
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
   </br>
     <label for="password">Password:</label>
-    <input type="text" id="password" name="password" required>
+    <input type="password" id="password" name="password" required>
   </br>
     <button type="submit" class="btn btn-secondary">Login</button>
   </form>
 
-  <body>
+  
   
     <!-- Bootstrap JS -->
     <script
