--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,20 +19,22 @@
 
     <title>Register</title>
   </head>
+  <body>
+    <%- include('partials/_header') %>
 
   <form method="POST" action="/register">
+  </br>
     <label for="email">Email:</label>
     <input type="email" id="email" name="email">
   </br>
     <label for="password">Password:</label>
-    <input type="text" id="password" name="password">
+    <input type="password" id="password" name="password">
   </br>
     <button type="submit" class="btn btn-secondary">Register</button>
   </form>
   
   
 
-  <body>
   
     <!-- Bootstrap JS -->
     <script
